Changelog
=========

2.1.1 (unreleased)
------------------

- fix close button in IE issue. Fixes #4
  [vangheem]

- add translations
  [vangheem]


2.1.0 (2012-05-02)
------------------

* Add Dutch translations.
  [markvl]

* Updated Spanish translation.
  [hvelarde]

* German translation added.
  [timo]

* compatible with latest collective.js.jqueryui
  [garbas]

2.1b2 (2011-12-06)
------------------

* fix undo bug where you can lose you edits and it errors.
  [vangheem]


2.1b1 (2011-11-16)
------------------

* By default, constrain aspect ratio on resize
  [vangheem]

* provide button to enable/disable constraining aspect ratio
  [vangheem]


2.0b2 (2011-11-11)
------------------

* Add "Image Editor" button now by default again.
  [vangheem]

* fix save as button
  [vangheem]


2.0b1 (2011-11-11)
------------------

* provide support for beaker storage instead
  of using zope session storage
  [vangheem]


1.8 (2012-04-13)
----------------

* Fixed 'image editor' tab.

    - on 'image editor' tab view, redirect to base view after close.
    - 'image editor' tab condition works for non-manager users,
    - Editor, Site Administrator and Owner have tab permission by default

  [thomasdesvenain]

* Force no cache on ajax so we can use ImageEditor behind a proxy-cache.
  [thomasdesvenain]

* French translations.
  [thomasdesvenain]

* Do not remove jquery ui 'global_include' on install
  not to break third part products using it.
  [thomasdesvenain]

1.7 - 2011-03-21
----------------

* Keep "Current image" link behavior untouched.
  Previously, clicking the "Current image" link opened the editor.
  [vincentfretin]

* Updated French translation.
  Redo and Undo translations were inversed.
  [vincentfretin]

* move back to collective.js.jqueryui since it now allows you
  to only show javascript on certain views.
  [vangheem]

* plone 4.1 compatible


1.6 - Released August 29, 2010
------------------------------

* stop using collective.js.jqueryui
  [vangheem]
